--- a/html/books/book1.html
+++ b/html/books/book1.html
@@ -4,20 +4,71 @@
         <title>Proyecto 01</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <style>
+            h1 {
+            color: rgb(68, 17, 114) ;
+            font-size: 25px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            h2{
+            color:rgb(125, 4, 162);
+            font-size: 45px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            h3{
+            color:rgb(125, 4, 162);
+            font-size: 25px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            p{
+            color:black;
+            font-size: 16px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            body{
+                background-color: rgb(212, 178, 245);
+            }
+            div {
+                text-align: center;
+                background-color: rgb(223, 199, 245);
+            }
+        </style>
     </head>
-    <body>
-    <h1>La Biblioteca</h1>       
     
-    <main>
-            <h2> C# avanzado</h2>
-            <p> Pedro López, Juan Ruiz </p>
-            <p>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consequat quis dui eu aliquam. Mauris sed dolor purus. Etiam eu sodales diam, id condimentum justo. Curabitur in massa ultricies, gravida sapien nec, consectetur sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eu nulla vel nisl efficitur aliquet. Morbi blandit a diam convallis malesuada. Phasellus quis pulvinar erat. Etiam sit amet metus tortor. Maecenas nec enim lobortis diam vulputate hendrerit eget et urna. Proin ut odio nibh.
-            </p>
-            <p>
-                Maecenas posuere turpis sed neque ultrices vestibulum. Nam accumsan nunc eget massa vehicula cursus. Donec mollis urna elit, vitae gravida risus tincidunt vitae. Sed a iaculis dolor. Nulla tempus feugiat quam non pellentesque. In sodales, metus ac viverra varius, dui est pulvinar dui, ac sollicitudin nibh dui sit amet felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis fermentum est et ligula vehicula suscipit. Suspendisse auctor feugiat auctor. Vestibulum nec diam at massa euismod congue id sit amet velit. Suspendisse potenti. Nullam velit orci, tincidunt sed varius sollicitudin, elementum eu nulla. Morbi purus neque, dapibus a dignissim a, accumsan in dui. Integer sed aliquam erat. Maecenas rhoncus tortor urna, non rutrum urna faucibus a. Aenean sed lorem id enim aliquam porta nec ac nisi. 
-            </p>
+    <body>
+        <h1>Libros de misterio</h1>       
+    
+        <main>
+            <div>
+                <h2> El Código Da Vinci</h2>
+                <h3> Dan Brown </h3>
+                <img src="https://static2planetadelibroscom.cdnstatics.com/usuaris/libros/fotos/221/original/portada_el-codigo-da-vinci-nueva-edicion_dan-brown_201607291100.jpg" alt="Portada del libro codigo da vinci" width="300" height="500" align>
+                <p>
+                    El Código Da Vinci es una novela de misterio protagonizada por Robert Langdon y Sophie Neveu, que pronto se convierten en los héroes de esta historia. Él es un profesor experto en simbología religiosa y ella es criptógrafa.
+                </p>
+                <p>
+                    Ambos se encuentran por primera vez en el Museo del Louvre investigando la muerte de Saunière, el abuelo de la chica. Este hombre ha sido asesinado y todo apunta a que la razón es que conocía la localización, y el secreto, del Santo Grial y de varios documentos que comprometerían al Vaticano. 
+                </p>
+                <p>
+                    Perseguidos por la policía al ser considerados sospechosos del crimen, Sophie y Robert van dando con diferentes pistas. La primera de ellas, una llave que encontraron en la escena del crimen, les lleva a una caja fuerte de un banco. Dentro de ella descubren un criptex, por lo que su siguiente parada es la casa de Teabing, un rico erudito conocido de Langdon. 
+                </p>
+                <p>
+                    Gracias a él descubran la contraseña del criptex y consiguen abrirlo. En su interior hay otro objeto de iguales características envuelto con una tela donde hay escrito un poema. Se encuentran, de nuevo, ante una incógnita. No obstante, esta primera reunión con Teabing les descubre otros muchos secretos. Al parecer existe la creencia de que el Santo Grial, que siempre se había pensado que era la copa de la que bebió Jesucristo en la última cena, es en realidad la tumba de María Magdalena. Esta mujer, cuenta la leyenda, llegó a casarse y a tener hijos con Jesús. Si esto fuese verdad, muchos de los dogmas cristianos caerían por su propio peso y, en la actualidad, habría descendencia. 
+                </p>
+                <p>
+                    En un momento dado aparece, avisado por el mayordomo de Teabing, Silas, el asesino de Saunière. Este hombre actúa bajo las órdenes de un «Maestro», que le obliga a matar, aparentemente, a todo aquel que quiera revelar el secreto del Santo Grial. Tras un forcejeo, consiguen reducir a Silas y con él se dirigen a Inglaterra, ya que es donde parecer enviarles el poema del criptex.
+                </p>
+                <p>
+                    En Inglaterra Silas consigue escapar de nuevo, llevándose el criptex y a Teabing como rehén. Sophie y Robert deciden seguir las pistas para salvar a su amigo y recuperar el criptex. Así llegan a la Abadía de Westminster, donde se supone que está la clave para abrir el objeto. Allí se encuentran con Teabing, que se descubre como el «Maestro». Su obsesión es revelar el Santo Grial y todos los documentos asociados a su leyenda para destrozar así a la Iglesia. Amenazándolo con una pistola, le da a Robert el criptex para que lo descifre y sepan por fin cuál es la localización del Grial. Por suerte, Robert consigue distraer a Teabing para arrebatarle el arma justo en el momento en el que llega la policía.
+                </p>
+                <p>
+                    Aunque por una parte todo esta solucionado, Robert terminó abriendo el criptex y decide ir con Sophie a Escocia, tal y como sugiere el mensaje que encontraron dentro. Allí llegan a la Rossalyn Chapel, donde Sophie se encuentra con su hermano pequeño y su abuela, a los que creía muertos. Se entera así que ella, junto a su hermano, es descendiente de María Magdalena y Jesucristo.
+                </p>
+            </div>
     </main>
     </body>
 </html>
