--- a/html/books/book2.html
+++ b/html/books/book2.html
@@ -4,20 +4,145 @@
         <title>Proyecto 01</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <style>
+            h1 {
+            color: rgb(68, 17, 114) ;
+            font-size: 25px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            h2{
+            color:rgb(125, 4, 162);
+            font-size: 45px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            h3{
+            color:rgb(125, 4, 162);
+            font-size: 25px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            p{
+            color:black;
+            font-size: 16px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            body{
+                background-color: rgb(212, 178, 245);
+            }
+            div {
+                background-color: rgb(223, 199, 245);
+                color:black;
+                font-size: 16px;
+                text-align: center;
+                font-family: 'Courier New', Courier, monospace;
+            }
+        </style>
     </head>
+    
     <body>
-    <h1>La Biblioteca</h1>       
+    <h1>Libros de misterio</h1>       
     
     <main>
-           <h2> El nuevo sistema operativo MS-DOS</h2>
-           <p> Joe Medina </p>
-           <p>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consequat quis dui eu aliquam. Mauris sed dolor purus. Etiam eu sodales diam, id condimentum justo. Curabitur in massa ultricies, gravida sapien nec, consectetur sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eu nulla vel nisl efficitur aliquet. Morbi blandit a diam convallis malesuada. Phasellus quis pulvinar erat. Etiam sit amet metus tortor. Maecenas nec enim lobortis diam vulputate hendrerit eget et urna. Proin ut odio nibh.
-            </p>
+        <div>
+            <h2> Asesinato en el Expreso de Oriente</h2>
+            <h3> Agatha Christie </h3>
+            <img src="https://1.bp.blogspot.com/-zR-qvEFqSY4/Wr_-J-q9-sI/AAAAAAAABGI/XDkAj5m2C2s4m_ZyAz0owNF3T2DWiLn2ACLcBGAs/s1600/ases.jpg" alt="Portada del libro asesinato en el eo" width="300" height="500" align>
+
             <p>
-                Maecenas posuere turpis sed neque ultrices vestibulum. Nam accumsan nunc eget massa vehicula cursus. Donec mollis urna elit, vitae gravida risus tincidunt vitae. Sed a iaculis dolor. Nulla tempus feugiat quam non pellentesque. In sodales, metus ac viverra varius, dui est pulvinar dui, ac sollicitudin nibh dui sit amet felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis fermentum est et ligula vehicula suscipit. Suspendisse auctor feugiat auctor. Vestibulum nec diam at massa euismod congue id sit amet velit. Suspendisse potenti. Nullam velit orci, tincidunt sed varius sollicitudin, elementum eu nulla. Morbi purus neque, dapibus a dignissim a, accumsan in dui. Integer sed aliquam erat. Maecenas rhoncus tortor urna, non rutrum urna faucibus a. Aenean sed lorem id enim aliquam porta nec ac nisi. 
-            </p>
+             La trama de la novela tiene lugar en el Orient Express, Hercules Poirot será uno de sus pasajeros. Aunque su intención era no volver aún a Londres, recibe un telegrama solicitando su presencia urgente allí.
+             </p>
+             <p>
+                 Normalmente en invierno el tren no suele tener pasajeros, ese día el Orient Express está lleno, aparentemente parece una casualidad, pero se descubrirá que todo es parte de un plan.
+             </p>
+             <p>
+                 El tren se detiene debido a una gran tormenta de nieve y queda incomunicado.
+             </p>
+             <p>
+                 La primera noche se produce un asesinato, la víctima es Ratchett, encuentran su cuerpo en su cama con doce puñaladas en el pecho.
+             </p>
+             <p>
+                 Bouc le pide a Poirot que se haga cargo de la investigación con la ayuda del doctor Constantine. Acuden al compartimento donde se encuentra el cadáver y allí descubren varias pistas:
+             </p>
+             <div>
+                 <ul>
+                   <li>La ventana se encuentra abierta y el pestillo estaba echado; el asesino ha intentado hacer creer que huyó por la ventana, pero es imposible, ya que no hay huellas en la nieve y no ha nevado desde que quedó el tren parado. </li>
+                   <li>Las doce puñaladas se han dado con diferentes grados de fuerza y tanto con la mano izquierda como con la derecha; hay varios asesinos. </li>
+                   <li>Debajo de la almohada encuentran una pistola cargada y no hay signos de lucha; descubren en un vaso vacío restos de narcóticos. </li>
+                   <li>Hay un trozo de tela con una “H” bordada y un limpiapipas; los asesinos han dejado pistas contradictorias para hacer más difícil la búsqueda de los culpables. </li>
+                   <li>En el bolsillo hay un reloj parado en la una y cuarto; la hora del crimen. </li>
+                   <li>En el cenicero encuentran unos fragmentos de papel quemado; consiguen descubrir parte de una frase: …cuerda a la pequeña Daisy Armstrong. </li>
+                 </ul>
+               </div>
+             <p>
+                 Ratchett como se hacía llamar, realmente era Casssetti, secuestrador y asesino de Daisy Armstrong. Cassetti secuestró a la pequeña de tres años y pidió un rescate desorbitado, tras pagar el rescate encontraron el cadáver de la niña, llevaba muerta más de quince días. Mrs. Armstrong que en aquel entonces estaba esperando su segundo hijo, se puso de parto prematuramente y ninguno de los dos sobrevivió, poco después su marido se suicidó.
+             </p>
+             <p>
+                 La policía inculpó a la niñera de Daisy como colaboradora del secuestro, tras varios duros interrogatorios se arrojó por la ventana. Después se descubrió su inocencia.
+             </p>
+             <p>
+                 A los seis meses detuvieron a Cassetti pero fue absuelto por falta de pruebas.
+             </p>
+             <p>
+                 Poirot, Bouc y el doctor empiezan los interrogatorios de cada una de las personas que se encuentran en el tren, todos se sorprenden por la muerte de Ratchett y se escandalizan al descubrir que realmente era Cassetti. Todos tienen coartada en el momento del asesinato.
+             </p>
+             <p>
+                 ras las declaraciones de cada uno de los viajeros del vagón, Poirot lo tiene claro, sabe quién es el asesino. Se ha dado cuenta de que ninguno de los viajeros ha dicho su verdadera identidad y todos tienen relación con la familia Armstrong:
+             </p>
+             <p>
+                 Hector MacQueen: hijo del fiscal encargado del caso.
+             </p>
+             <p>
+                 Edward Masterman: ordenanza del coronel Armstrong durante la Gran Guerra.
+             </p>
+             <p>
+                 Mary Debenham: secretaria de Sonia Armstrong e institutriz de Daisy.
+             </p>
+             <p>
+                 Coronel Arbuthnot: compañero y mejor amigo del coronel Armstrong.
+             </p>
+             <p>
+                 Princesa Dragomiroff: madrina de Sonia Armstrong.
+             </p>
+             <p>
+                 Hildegarde Schmidt: cocinera de la familia Armstrong.
+             </p>
+             <p>
+                 Condesa Andrenyi: su apellido de soltera es Goldenberg, es hermana de Sonia Armstrong y tía de Daisy.
+             </p>
+             <p>
+                 Greta Ohlsson: niñera de Daisy.
+             </p>
+             <p>
+                 Caroline Hubbard: actriz llamada Linda Arden, aunque su apellido realmente es Goldenberg, es madre de Sonia Armstrong y abuela de Daisy.
+             </p>
+             <p>
+                 Antonio Foscarelli: chófer de la familia Armstrong.
+             </p>
+             <p>
+                 Cyrus Bethman: policía que trabajó en el caso Armstrong.
+             </p>
+             <p>
+                 Pierre Michel: padre de Susanne, la doncella de la familia Armstrong que tras ser duramente interrogada y acusada de cómplice de los secuestradores por la policía se suicida.
+             </p>
+             <p>
+                 Poirot los reúne a todos y les indica que hay dos soluciones para el crimen.
+             </p>
+             <p>
+                 La primera solución es que Cassetti tenía un enemigo y este lo asesinó antes de la última parada, por lo que pudo bajarse del tren antes de que se pusiera en marcha.
+             </p>
+             <p>
+                 La segunda solución es que el asesino se encuentra entre los ocupantes del vagón donde viajaba Cassetti. Explica que todos los allí presentes han mentido y realmente todos están relacionados con Daisy Armstrong por lo que decidieron entre todos crear un plan para acabar con la vida de Cassetti y así hacer justicia.
+             </p>
+             <p>
+                 Los pasajeros tras verse descubiertos terminan confesando el crimen, aunque la última palabra la tiene el director de la compañía, el señor Bouc, él tiene que decidir cual de las dos soluciones es la correcta.
+             </p>
+             <p>
+                 Para Bouc la primera solución es la correcta, por lo que será la versión que le ofrezcan a la policía.
+             </p>
+        </div>
     </main>
     </body>
 </html>
