--- a/html/books/book3.html
+++ b/html/books/book3.html
@@ -4,19 +4,63 @@
         <title>Proyecto 01</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <style>
+            h1 {
+            color: rgb(68, 17, 114) ;
+            font-size: 25px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            h2{
+            color:rgb(125, 4, 162);
+            font-size: 45px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            h3{
+            color:rgb(125, 4, 162);
+            font-size: 25px;
+            text-align: center;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            }
+            p{
+            color:black;
+            font-size: 16px;
+            text-align: left;
+            font-family: 'Courier New', Courier, monospace;
+            }
+            body{
+                background-color: rgb(212, 178, 245);
+            }
+            div {
+                background-color: rgb(223, 199, 245);
+                color:black;
+                font-size: 16px;
+                text-align: center;
+                font-family: 'Courier New', Courier, monospace;
+            }
+        </style>
     </head>
+
     <body>
-    <h1>La Biblioteca</h1>       
+    <h1>Libros de misterio</h1>       
     
     <main>
-            <h2> La Metamorfosis </h2>
-            <p> Patrick Alvarado </p>            <p>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam consequat quis dui eu aliquam. Mauris sed dolor purus. Etiam eu sodales diam, id condimentum justo. Curabitur in massa ultricies, gravida sapien nec, consectetur sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eu nulla vel nisl efficitur aliquet. Morbi blandit a diam convallis malesuada. Phasellus quis pulvinar erat. Etiam sit amet metus tortor. Maecenas nec enim lobortis diam vulputate hendrerit eget et urna. Proin ut odio nibh.
+        <div>
+            <h2> El Silencio de los Corderos </h2>
+            <h3> Thomas Harris </h3> 
+            <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/b1/de/b1de2f563a3215bb8925ac371b6c6aba.jpg" alt="Portada del libro el silencio de los cor" width="300" height="500" align>
+           
+            <p> 
+                La trama comienza con Clarice Starling, una estudiante en la Academia del FBI, siendo reclutada por el agente Jack Crawford para ayudar en la investigación de un asesino en serie conocido como "Buffalo Bill". Este asesino ha estado secuestrando y asesinando a mujeres jóvenes, y su modus operandi incluye desollar a sus víctimas. Crawford cree que Clarice, debido a su naturaleza diligente y su habilidad para empatizar con los criminales, puede obtener información valiosa de otro asesino en serie encarcelado, el Dr. Hannibal Lecter.
             </p>
             <p>
-                Maecenas posuere turpis sed neque ultrices vestibulum. Nam accumsan nunc eget massa vehicula cursus. Donec mollis urna elit, vitae gravida risus tincidunt vitae. Sed a iaculis dolor. Nulla tempus feugiat quam non pellentesque. In sodales, metus ac viverra varius, dui est pulvinar dui, ac sollicitudin nibh dui sit amet felis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis fermentum est et ligula vehicula suscipit. Suspendisse auctor feugiat auctor. Vestibulum nec diam at massa euismod congue id sit amet velit. Suspendisse potenti. Nullam velit orci, tincidunt sed varius sollicitudin, elementum eu nulla. Morbi purus neque, dapibus a dignissim a, accumsan in dui. Integer sed aliquam erat. Maecenas rhoncus tortor urna, non rutrum urna faucibus a. Aenean sed lorem id enim aliquam porta nec ac nisi. 
+                Lecter es un psiquiatra brillante y caníbal que está encarcelado en el Hospital Estatal de Baltimore. Clarice se encuentra con él en prisión y, a lo largo de una serie de visitas, trata de obtener pistas sobre la identidad de Buffalo Bill. Sin embargo, Lecter es un manipulador maestro y su relación con Clarice se vuelve complicada, oscilando entre momentos de cooperación y manipulación psicológica.
             </p>
+            <p> 
+                Mientras tanto, Buffalo Bill continúa secuestrando y matando mujeres, y la presión sobre el FBI aumenta para detenerlo. Clarice sigue las pistas y llega a un antiguo paciente de Lecter, lo que la lleva a una confrontación final con el asesino. Con la ayuda de Lecter, Clarice resuelve el caso y detiene a Buffalo Bill, pero no sin enfrentar peligrosas situaciones y descubrir oscuros secretos sobre el pasado de Lecter.
+            </p>
+        </div>
     </main>
     </body>
 </html>
