--- a/html/index.html
+++ b/html/index.html
@@ -4,23 +4,52 @@
         <title>Proyecto 01</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
     </head>
+    <style>
+        h1 {
+        color: rgb(68, 17, 114) ;
+        font-size: 45px;
+        text-align: center;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
+        h2{
+        color:black;
+        font-size: 25px;
+        text-align: left;
+        font-family: 'Courier New', Courier, monospace;
+        }
+        p{
+        color:black;
+        font-size: 20px;
+        text-align: left;
+        font-family: 'Courier New', Courier, monospace;
+        }
+        body{
+                background-color: rgb(212, 178, 245);
+            }
+        div {
+                background-color: rgb(223, 199, 245);
+            }
+    </style>
     <body>
-    <h1>La Biblioteca</h1>       
-    
-    <article>
-            <h2><a href="\books\1"> C# avanzado </a></h2>
-            <p> Pedro López, Juan Ruiz </p>
-            <br> 
-            <h2><a href="\books\2"> El nuevo sistema operativo MS-DOS</a></h2>
-            <p> Joe Medina </p>
-            <br> 
-            <h2><a href="\books\3"> La Metamorfosis </a></h2>
-            <p> Patrick Alvarado </p>
-            <br> 
-            <h2><a href="\books\4"> La Danza de Hielo y Fuego </a></h2>
-            <p> R.R. González </p>
-    </article>
+        <h1>Libros de misterio</h1>       
+        <article>
+            <div>
+                <h2><a href="\books\1"> El Código Da Vinci </a></h2>
+                <p> Dan Brown </p>
+                <br> 
+                <h2><a href="\books\2"> Asesinato en el Expreso de Oriente </a></h2>
+                <p> Agatha Christie </p>
+                <br> 
+                <h2><a href="\books\3"> El Silencio de los Corderos </a></h2>
+                <p> Thomas Harris </p>
+                <br> 
+                <h2><a href="\books\4"> La chica del tren </a></h2>
+                <p> Paula Hawkins </p>
+                <h2><a href="\books\5"> La chica del dragón tatuado </a></h2>
+                <p> Stieg Larsson </p>
+            </div>
+        </article>
     </body>
 </html>
